# test_vcpkg

./: .gitignore  CMakeLists.txt  build.bat  build.sh  main.cpp
